# software-rendering

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
src/: pch.h
src/renderer/: CMakeLists.txt  config.h  renderer.h  rendering_interface.cpp  rendering_interface.h  shelf_pack.hpp
src/renderer/glad/include/glad/: glad.h
src/renderer/glad/src/: glad.c
